# grok-py-cli

./: .gitignore  .pre-commit-config.yaml  CLI_tasks.md  LICENSE  MCP_PRD.md  Makefile  PRD.md  README.md  check_venv.py  debug_mcp.py  debug_mcp_call.py  debug_mcp_full.py  debug_mcp_long_timeout.py  debug_mcp_test.py  dev-setup.sh  grok  grok-cli  mcp_rewrite.md  mcp_rewrite_plan.md  phase1_core_infrastructure.md  phase2_tool_implementation.md  phase3_ui_and_polish.md  phase4_advanced_features.md  phase5_testing_and_release.md  project_summary.md  pyproject.toml  pytest.ini  screenshot.md  status7.md  tasks.md  test_progress.md  uv_best_practices.md
.github/workflows/: ci.yml
docs/: index.md  mcp.md  testing.md
examples/: mcp_config.yaml
grok_py/: __init__.py  __main__.py  cli.py
grok_py/agent/: grok_agent.py  tool_manager.py
grok_py/grok/: client.py  tools.py
grok_py/mcp/: __init__.py  client.py  config.py
grok_py/tools/: __init__.py  apt.py  archive.py  base.py  bash.py  calendar.py  code_execution.py  confirmation.py  database.py  disk.py  email.py  example_calculator.py  file_ops.py  file_tools.py  github.py  integrity.py  network.py  news.py  search_replace.py  sync.py  systemctl.py  todo.py  version_control.py  weather.py  web_search.py
grok_py/ui/: chat_interface.py  input.py  terminal_ui.py
grok_py/ui/components/: __init__.py  confirm.py  progress.py  status.py
grok_py/utils/: config.py  custom_instructions.py  logging.py  settings.py  token_counter.py
grok_py/utils/sandbox/: __init__.py  docker_manager.py  language_utils.py  security_utils.py
mcp_cli/: README.md  pyproject.toml  requirements.txt  setup.py
mcp_cli/mcp_cli/: cli.py  client.py  config.py  models.py  sse_handler.py
mcp_cli/tests/: __init__.py  test_client.py  test_models.py
plans/: CLI_PRD.md  phase2_tool_implementation.md  phase3_ui_and_polish.md  phase4_advanced_features.md  phase4_task3_breakdown.md  phase5_task1_testing.md  phase5_testing_and_release.md  status.md  status2.md  status3.md  status4.md  status5.md  status6.md
src/mcp_cli/: cli.py
tests/: __init__.py  conftest.py  test_mcp_server.py
tests/acceptance/: __init__.py  test_user_scenarios.py
tests/fixtures/: __init__.py  sample_code.py  sample_text.txt
tests/integration/: __init__.py  test_apt_integration.py  test_bash_integration.py  test_code_execution.py  test_disk_integration.py  test_file_operations.py  test_mcp_integration.py  test_systemctl_integration.py  test_web_search.py
tests/security/: test_penetration.py
tests/system/: __init__.py  test_cli_chat.py  test_development_workflow.py  test_system_administration.py
tests/unit/: __init__.py  test_agent.py  test_apt.py  test_base.py  test_bash.py  test_calendar.py  test_cli.py  test_code_execution.py  test_config.py  test_confirmation.py  test_custom_instructions.py  test_database.py  test_disk.py  test_example_calculator.py  test_file_tools.py  test_github.py  test_mcp.py  test_mcp_client.py  test_network.py  test_news.py  test_search_replace.py  test_settings.py  test_systemctl.py  test_todo.py  test_token_counter.py  test_version_control.py  test_weather.py  test_web_search.py
ui/: __init__.py  buffer.py  caching.py  input_handler.py  parser.py  streaming.py  updates.py  validator.py
ui/components/: __init__.py  confirm.py  prompt.py
